fix overflow issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,10 +20,10 @@ h5 {
 .app {
   display: block;
   margin: auto;
-  background-color: #fff;
+  background-color: #fffcf0;
   width: 300px;
-  height: 500px;
-  border: 5px solid #abcea1;
+  height: auto;
+  border: 5px solid #b9c7ce;
   border-radius: 8px;
   padding: 15px;
 }
